--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <span>контакты</span>
                     <span>-просмотреть-</span>
                 </div>
-                <a href="">-добавить новый</a>
+                <a href="">добавить новый</a>
             </nav>
         </div>
         
@@ -184,14 +184,14 @@
                 <a href="">перейти</a>
             </nav>
 
-            <nav class="nav-panel__button-registration">
+            <!-- <nav class="nav-panel__button-registration">
                 <div>
                     <img src="svg-fillers/registration.svg" alt="">
                     <span>регистрация</span>
                     <span>-создать аккаунт-</span>  
                 </div>
                 <a href="">перейти</a>
-            </nav>
+            </nav> -->
         </div>
     </div>
     <script src="scripts-char-buttons/script-buttons-charView.js"></script>
