--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="nav-panel__text">
                     <a href="">ЧАТЫ</a>
-                    <a href="">-нажмите для просмотра-</a>
+                    <a href="">нажмите для просмотра</a>
                 </div>
             </nav>
 
@@ -143,7 +143,7 @@
                 <div>
                     <img src="svg-fillers/user.svg" alt="">
                     <span>контакты</span>
-                    <span>-просмотреть-</span>
+                    <span>просмотреть</span>
                 </div>
                 <a href="">добавить новый</a>
             </nav>
@@ -156,7 +156,7 @@
                     <img src="svg-fillers/trending.svg" alt="">
                     <img src="svg-fillers/questionmark.svg" alt="">
                     <span>тренды</span>
-                    <span>-посмотрите что сегодня в тренде-</span>  
+                    <span>посмотрите что сегодня в тренде</span>  
                 </div>
                 <a href="">перейти</a>
             </nav>
@@ -169,7 +169,7 @@
                 <img class="profile__bg-filler" src="svg-fillers/profileUser.svg" alt="">
                 <div class="nav-panel__text">
                     <a href="">профиль</a>
-                    <a href="">-редактировать-</a>
+                    <a href="">редактировать</a>
                 </div>
             </nav>
         </div>
@@ -178,8 +178,8 @@
             <nav class="nav-panel__button-authorisation">
                 <div>
                     <img src="svg-fillers/authorisation.svg" alt="">
-                    <span>авторизация</span>
-                    <span>-войти в аккаунт-</span>  
+                    <span>войти</span>
+                    <span>войти в аккаунт</span>  
                 </div>
                 <a href="">перейти</a>
             </nav>
